Small fix with alignment of buttons

--- a/app/src/blocks/_button.scss
+++ b/app/src/blocks/_button.scss
@@ -13,6 +13,7 @@
 	position: relative;
 	display: inline-block;
 	line-height: 3.4;
+	text-align: center;
 
 	@media (min-width: $screen-lg) {
 		width: 426px;
